Fix horizontal collapsing.

--- a/grid.scss
+++ b/grid.scss
@@ -22,11 +22,8 @@
 
 .col {
   float: left;
-  padding-right: 20px;
-
-  .row &:last-of-type {
-    padding-right: 0;
-  }
+  padding: 0 10px;
+  min-height: 1px;
 }
 
 // The Grid
